Now getting webjars for bootstrap and jquery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8999
+
+#
+# [ Database Configuration Section ]
+#
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/csgo-scores
+spring.datasource.username=postgres
+spring.datasource.password=postgres
