--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,14 @@
     <artifactId>respect</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>1.3.2.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -35,6 +37,19 @@
             <artifactId>spring-boot-actuator</artifactId>
             <version>1.2.4.RELEASE</version>
         </dependency>
+
+        <!--WebJars-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
@@ -48,8 +63,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.3.2.RELEASE</version>
+
             </plugin>
         </plugins>
     </build>
-    
+
+
+
 </project>
