--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>respect</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.6.RELEASE</version>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -56,18 +61,13 @@
         <java.version>1.8</java.version>
     </properties>
 
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.3.2.RELEASE</version>
-
             </plugin>
         </plugins>
     </build>
-
-
-
 </project>
