--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/csgo-scores
+spring.datasource.url=jdbc:postgresql://localhost:5432/respect
 spring.datasource.username=postgres
 spring.datasource.password=postgres
