--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>1.2.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!--WebJars-->
         <dependency>
             <groupId>org.webjars</groupId>
