Added more validation on account creation.  Now enforcing validation.

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <version>2.2.1</version>
         </dependency>
 
+        <!--Apache-->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
