--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>jquery</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery-ui</artifactId>
+            <version>1.9.2</version>
+        </dependency>
 
         <!--Apache-->
         <dependency>
