--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>1.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+
         <!--Apache-->
         <dependency>
             <groupId>commons-beanutils</groupId>
