--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/respect
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+
+spring.thymeleaf.cache=false
+spring.mvc.favicon.enabled=true
